# go-wal-store

./: BUILD  MODULE.bazel  README.md  go.mod
.proto/: keyValue.pb.go
cmd/gowalstore/: main.go
cmd/simplewal/: BUILD  main.go
internal/wal/: BUILD  wal.go  wal_test.go
proto/: BUILD  wal.pb.go  wal.proto
proto/simplewal/proto/: wal.pb.go
