module(
    name = "simplewal",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Extension for go_repository deps (go_deps)
go_deps = use_extension("@rules_go//go:extensions.bzl", "go_deps")

go_deps.call(
    require = [
        "google.golang.org/protobuf@v1.33.0",
    ],
    go_repository = {
        "google.golang.org/protobuf": "org_golang_google_protobuf",
    },
)

# Proto rules
proto = use_extension("@rules_proto//proto:extensions.bzl", "proto")
proto.register_toolchains()

register_toolchains("@rules_go//go:toolchain")